[gd_scene load_steps=3 format=2]

[ext_resource path="res://Assets/Scenes/Enemy/Spawner/Spawner.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 640.0

[node name="Spawner" type="Area2D"]
script = ExtResource( 1 )

[node name="SpawnArea" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Spawner_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Spawner_body_exited"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
